# CryptoWallet

./: .gitignore  .pre-commit-config.yaml  Makefile  async-api_messeges.yaml  commands.py  docker-compose.yml  openapi.json  pyproject.toml  test_sockets.html
base_api/: .env.prod  base_api_consumer.py  base_api_producer.py  pyproject.toml  pytest.ini
base_api/apps/chat/: database.py  dependencies.py  exeptions.py  manager.py  models.py  schemas.py  test.py  views.py
base_api/apps/ethereum/: database.py  database.py.orig  dependencies.py  exeptions.py  manager.py  manager.py.orig  models.py  schemas.py  tasks.py  views.py  web3_client.py
base_api/apps/frontend/: auth.py  basic_test.py  chat.py  dependecies.py  errors.py  ibay.py  router.py  user_profile.py  wallets.py
base_api/apps/ibay/: database.py  dependencies.py  enums.py  exeptions.py  manager.py  models.py  schemas.py  scheme.py  views.py
base_api/apps/tests/: conftest.py  factories.py
base_api/apps/tests/users_tests/: test_login.py  test_profile.py  test_regisration.py  test_root.py
base_api/apps/users/: database.py  dependencies.py  exeptions.py  jwt_backend.py  manager.py  models.py  schemas.py  tasks.py  views.py
base_api/apps/users/utils/: password_hasher.py  validators.py
base_api/config/: __init__.py  app.py  celery.py  celery_utils.py  db.py  lifetime.py  router.py  routers.py  settings.py  storage.py
base_api/config/commands/: admin.py  init.py
base_api/config/utils/: email_client.py  fastapi_limiter.py  sqlalchemy_admin.py
base_api/static/app-assets/css/: colors.min.css
base_api/static/app-assets/css-rtl/: bootstrap.css  colors.min.css
base_api/static/app-assets/css-rtl/core/colors/: palette-gradient.min.css
base_api/static/app-assets/css-rtl/pages/: app-calendar.css  app-chat-list.css  app-chat-list.min.css  app-file-manager.min.css  app-invoice-list.css  app-invoice-list.min.css  app-invoice-print.css  app-invoice-print.min.css  app-todo.min.css  dashboard-ecommerce.min.css  page-coming-soon.css  page-profile.css  page-profile.min.css
base_api/static/app-assets/css-rtl/plugins/charts/: chart-apex.css
base_api/static/app-assets/css-rtl/plugins/extensions/: ext-component-drag-drop.css  ext-component-drag-drop.min.css  ext-component-media-player.css  ext-component-ratings.css  ext-component-sliders.css  ext-component-swiper.css  ext-component-toastr.css  ext-component-tour.css
base_api/static/app-assets/css-rtl/themes/: bordered-layout.css  dark-layout.min.css  semi-dark-layout.css
base_api/static/app-assets/css/pages/: app-calendar.min.css  app-chat.min.css  app-invoice-print.min.css  page-blog.min.css  page-knowledge-base.min.css  page-misc.min.css
base_api/static/app-assets/css/themes/: semi-dark-layout.min.css
base_api/static/app-assets/data/: search.json
base_api/static/app-assets/data/locales/: de.json  en.json  pt.json
base_api/static/app-assets/js/core/: app.min.js
base_api/static/app-assets/vendors/js/: vendors.min.js
base_api/static/custom/js/: basic.js  chat.js  ibay.js  login.js  registration.js  user_profile.js  wallets.js  wallets.js.orig
base_api/templates/basic_template/: basic.html
base_api/templates/chat/: chat.html
base_api/templates/chat/asyncapi/: index.html
base_api/templates/emails/: new_user.html
base_api/templates/errors/: 404.html
base_api/templates/ibay/: ibay.html
base_api/templates/users/: login.html  registration.html  user_profile.html
base_api/templates/wallets/: wallets.html
eth_node/: .env.prod  eth_parser.py  pyproject.toml
ibay/: .env.prod  pyproject.toml  (+2 more)
sockets/: .env.prod  pyproject.toml  socket_manager.py  socketio-server.py  socketio_server.py  sockets_consumer.py
sockets/apps/chat/: database.py  dependencies.py  manager.py  models.py  mongo_models.py  schemas.py  views.py
sockets/apps/wallet/: database.py  dependencies.py
sockets/config/: app.py  db.py  lifetime.py  mongo_db.py  settings.py
(+388 files in other folders)
