[tool.poetry]
name = "crypto-wallet"
version = "0.1.0"
description = ""
authors = ["dima_nikitin <nikitindima1206@gmail.com>"]
readme = "README.md"
packages = [{include = "crypto_wallet"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
