[tool.poetry]
name = "crypto-wallet"
version = "0.1.0"
description = ""
authors = ["dima_nikitin <nikitindima1206@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.89.1"
greenlet = "^2.0.1"
sqlalchemy= "^1.4.46"
python-dotenv = "^0.21.0"
yarl = "^1.8.2"
sqlalchemy-utils = "^0.39.0"
alembic = "^1.9.1"
psycopg2-binary = "^2.9.5"
uvicorn = "^0.20.0"
asyncpg = "^0.27.0"
databases = "^0.7.0"
python-socketio = "^5.7.2"
async-lru = "^1.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
