[tool.poetry]
name = "eth-node"
version = "0.1.0"
description = ""
authors = ["dima_nikitin <nikitindima1206@gmail.com>"]
readme = "README.md"
packages = [{include = "eth_node"}]

[tool.poetry.dependencies]
python = "^3.9"
aio-pika = "^8.3.0"
pydantic = "^1.10.4"
websockets = "^10.4"
python-dotenv = "^0.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
